feat: Added view with questions list

--- a/hearttalk/hearttalk/Info.plist
+++ b/hearttalk/hearttalk/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>PlayfairDisplay-Regular.ttf</string>
+		<string>PlayfairDisplay-SemiBold.ttf</string>
 	</array>
 </dict>
 </plist>
