feat: New logic

--- a/hearttalk/hearttalk/Info.plist
+++ b/hearttalk/hearttalk/Info.plist
@@ -7,5 +7,12 @@
 		<string>PlayfairDisplay-Regular.ttf</string>
 		<string>PlayfairDisplay-SemiBold.ttf</string>
 	</array>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>LightBlack</string>
+		<key>UILaunchScreen</key>
+		<dict/>
+	</dict>
 </dict>
 </plist>
