--- a/hearttalk/Podfile
+++ b/hearttalk/Podfile
@@ -1,6 +1,8 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
+source 'https://github.com/CocoaPods/Specs.git'
+
 target 'hearttalk' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
@@ -8,5 +10,8 @@ target 'hearttalk' do
   # Pods for hearttalk
   pod 'RealmSwift'
   pod 'Alamofire'
+  pod 'FirebaseCore'
+  pod 'FirebaseFirestore'
+  pod 'FirebaseDatabase'
 
 end
