feat: Updated version

--- a/hearttalk/hearttalk/en.lproj/Info.plist
+++ b/hearttalk/hearttalk/en.lproj/Info.plist
@@ -14,5 +14,7 @@
 		<key>UILaunchScreen</key>
 		<dict/>
 	</dict>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Heart Talk requires speech recognition.</string>
 </dict>
 </plist>
