feat: Added widgets and fix for changing language

--- a/hearttalk/Podfile
+++ b/hearttalk/Podfile
@@ -12,3 +12,12 @@ target 'hearttalk' do
   pod 'Alamofire'
 
 end
+
+target 'hearttalkWidgetExtensionExtension' do
+  # Comment the next line if you don't want to use dynamic frameworks
+  use_frameworks!
+
+  # Pods for hearttalk
+  pod 'RealmSwift'
+
+end
