feat: Added ad and alerts

--- a/hearttalk/Podfile
+++ b/hearttalk/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '17.0'
 
 source 'https://github.com/CocoaPods/Specs.git'
 
@@ -9,6 +9,7 @@ target 'hearttalk' do
 
   # Pods for hearttalk
   pod 'RealmSwift'
+  pod 'YandexMobileAds'
 
 end
 
