feat: Added loading data from firebase, language change without losing data, create screen buttons fix,

--- a/hearttalk/Podfile
+++ b/hearttalk/Podfile
@@ -10,6 +10,10 @@ target 'hearttalk' do
   # Pods for hearttalk
   pod 'RealmSwift'
   pod 'YandexMobileAds'
+  pod 'FirebaseCore'
+  pod 'FirebaseFirestore'
+  pod 'FirebaseDatabase'
+  pod 'FirebaseRemoteConfig'
 
 end
 
